--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,9 @@
 <div class="home-page-content">
-  <div class="greendiv">
-
-  </div>
   <div class="all-homepage-content">
     <div class="welcome">
       <h1>Welcome to Link Saver</h1>
       <p>A clean, simple, and beautiful way to manage your bookmarks.</p>
-      <img src="" alt="">
+      <img src="/images/mock.png" alt="">
     </div>
     <div class="login-signup-buttons">
 
@@ -23,7 +20,7 @@
         </p>
         {{/if}}
         <form action="/user/sign-up" class="col s12" method="POST">
-          <div class="row">
+          <div class="row index-form">
             <div class="input-field col s12">
               <input name="firstName" type="text" class="validate">
               <label>First Name:</label>
