--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -5,7 +5,7 @@
       <li><a href="/news-feed/all">News Feed</a></li>
     </ul>
     <form class="search" action="/user/search" method="POST">
-      Search: <input type="text" name="search">
+      <input type="text" name="search" placeholder="Search for user's, bookmark's, and folder's...">
       <button class="waves-effect waves-light btn-large search-btn"> search</button>
     </form>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
