--- a/views/partials/userCard.hbs
+++ b/views/partials/userCard.hbs
@@ -23,7 +23,7 @@
     <span class="card-title activator grey-text text-darken-4">{{this.firstName}} {{this.lastName}}<i
         class="material-icons right">more_vert</i></span>
     <div class="bookmark-options">
-      <a href="/user/{{this._id}}" target="_blank">Go to {{this.username}}'s profile</a>
+      <a href="/user/{{this._id}}">Go to {{this.username}}'s profile</a>
     </div>
   </div>
   <div class="card-reveal">
