--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,3 +1,41 @@
+<!-- 
+                                 ,---.
+                                /    |
+                               /     |
+                              /      |
+                             /       |
+                        ___,'        |
+                      <  -'          :
+                       `-.__..--'``-,_\_
+                          |o/ <o>` :,.)_`>
+                          :/ `     ||/)
+                          (_.).__,-` |\
+                          /( `.``   `| :
+                          \'`-.)  `  ; ;
+                          | `       /-<
+                          |     `  /   `.
+          ,-_-..____     /|  `    :__..-'\
+         /,'-.__\\  ``-./ :`      ;       \
+         `\ `\  `\\  \ :  (   `  /  ,   `. \
+           \` \   \\   |  | `   :  :     .\ \
+            \ `\_  ))  :  ;     |  |      ): :
+           (`-.-'\ ||  |\ \   ` ;  ;       | |
+            \-_   `;;._   ( `  /  /_       | |
+             `-.-.// ,'`-._\__/_,'         ; |
+                \:: :     /     `     ,   /  |
+                 || |    (        ,' /   /   |
+                 ||                ,'   / SSt|
+
+███╗   ███╗██████╗    ██╗    ██╗██╗███████╗ █████╗ ██████╗ ██████╗ 
+████╗ ████║██╔══██╗   ██║    ██║██║╚══███╔╝██╔══██╗██╔══██╗██╔══██╗
+██╔████╔██║██████╔╝   ██║ █╗ ██║██║  ███╔╝ ███████║██████╔╝██║  ██║
+██║╚██╔╝██║██╔══██╗   ██║███╗██║██║ ███╔╝  ██╔══██║██╔══██╗██║  ██║
+██║ ╚═╝ ██║██║  ██║██╗╚███╔███╔╝██║███████╗██║  ██║██║  ██║██████╔╝
+╚═╝     ╚═╝╚═╝  ╚═╝╚═╝ ╚══╝╚══╝ ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═════
+
+ -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,6 +46,7 @@
   <title>Link Savor</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="shortcut icon" type="img/png" href="/images/favicon.png" />
   <script src="https://kit.fontawesome.com/a561988c34.js"></script>
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
