--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,9 @@ a {
   align-items: center; }
 
 .welcome p {
-  font-size: 20px; }
+  font-size: 20px;
+  width: 68%;
+  margin-top: 0; }
 
 .welcome img {
   margin-top: 50px;
