--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,9 @@
   <div class="all-homepage-content">
     <div class="welcome">
       <h1>Welcome to Link Saver</h1>
-      <p>A clean, simple, and beautiful way to manage your bookmarks.</p>
+      <p>An app that saves your bookmarks in a clean and simple way, and allows you to view how others save
+        theirs.
+      </p>
       <img src="/images/mock.png" alt="">
     </div>
     <div class="login-signup-buttons">
