--- a/views/partials/bookmarkCard.hbs
+++ b/views/partials/bookmarkCard.hbs
@@ -1,7 +1,9 @@
 <div class="card">
-  <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="">
-  </div>
+  <a href="{{bookmark.url}}" target="_blank">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="">
+    </div>
+  </a>
   <div class="card-content">
     <span class="card-title activator grey-text text-darken-4">{{bookmark.title}}<i
         class="material-icons right">more_vert</i></span>
