--- a/views/userProfile.hbs
+++ b/views/userProfile.hbs
@@ -5,7 +5,7 @@
   <div class="total-user-content">
     <div class="one-user-card">
       <div class="user-card-single">
-        <div class="card-img" style="background-image: url('/images/me.png')">
+        <div class="card-img" style="background-image: url('{{data.userInfo.img}}')">
         </div>
         <div class="user-card-info">
           <label for="">Name:</label>
