--- a/views/partials/userCard.hbs
+++ b/views/partials/userCard.hbs
@@ -17,7 +17,7 @@
 
 <div class="card">
   <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="/images/me.png">
+    <img class="activator" src="{{this.img}}">
   </div>
   <div class="card-content">
     <span class="card-title activator grey-text text-darken-4">{{this.firstName}} {{this.lastName}}<i
