--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -4,7 +4,7 @@
   <div class="total-user-content">
     <div class="one-user-card">
       <div class="user-card-single">
-        <div class="card-img" style="background-image: url('/images/me.png')">
+        <div class="card-img" style="background-image: url('{{user.img}}')">
         </div>
         <div class="user-card-info">
           <label for="">Name:</label>
