--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,9 +5,9 @@
       <p>An app that saves your bookmarks in a clean and simple way, and allows you to view how others save
         theirs.
       </p>
-      <img src="/images/mock.png" alt="">
+      <img id="mock" src="/images/mock.png" alt="">
     </div>
-    <div class="login-signup-buttons">
+    <div id="sign-up" class="login-signup-buttons">
 
       <div class="signup-button">
         <h3>Sign Up</h3>
