--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,9 @@
 <div class="home-page-content">
   <div class="all-homepage-content">
     <div class="welcome">
-      <h1>Welcome to Link Saver</h1>
-      <p>An app that saves your bookmarks in a clean and simple way, and allows you to view how others save
+      <h1 class="welcome-text">Welcome to Link Saver</h1>
+      <p class="welcome-text">An app that saves your bookmarks in a clean and simple way, and allows you to view how
+        others save
         theirs.
       </p>
       <img id="mock" src="/images/mock.png" alt="">
